@@ -296,7 +296,7 @@
 <!-- Great. AElfred doesn't support entities in attribute values,
      but all other XML parsers complain if < appears. -->
 <MODE NAME="xml"		FILE="xml.xml"
-				FILE_NAME_GLOB="*.{xml,xhtml}"
+				FILE_NAME_GLOB="*.{xml,xhtml,xsd}"
 				FIRST_LINE_GLOB="<\?xml*" />
 
 </MODES>
